[tool.poetry]
name = "async-extensions"
version = "1.2.0"
description = "Asynchronous extensions."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/async-extensions"
repository = "https://github.com/nekitdev/async-extensions"

keywords = ["python", "async", "extensions"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Discord = "https://nekit.dev/discord"
Funding = "https://patreon.com/nekitdev"
Issues = "https://github.com/nekitdev/solus/issues"

[[tool.poetry.packages]]
include = "async_extensions"

[tool.poetry.dependencies]
python = ">= 3.7"

anyio = ">= 3.6.2"
solus = ">= 1.1.0"

[tool.poetry.group.format]
optional = true

[tool.poetry.group.format.dependencies]
black = "22.12.0"

[tool.poetry.group.format.dependencies.isort]
version = "5.11.4"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
mypy = "0.991"

[tool.poetry.group.dev.dependencies]
changelogging = "1.1.0"

[tool.black]
line_length = 100

[tool.isort]
line_length = 100
profile = "black"

[tool.mypy]
show_column_numbers = true

disallow_any_decorated = true
disallow_any_generics = true
warn_return_any = true

no_implicit_optional = true
strict_optional = true

strict_equality = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_globals = true

disallow_incomplete_defs = true

warn_no_return = true
warn_unreachable = true

warn_redundant_casts = true
warn_unused_ignores = false  # compatibility

[tool.changelogging]
name = "async-extensions"
version = "1.2.0"
url = "https://github.com/nekitdev/async-extensions"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.4.0"]
build-backend = "poetry.core.masonry.api"
