[tool.poetry]
name = "async-extensions"
version = "2.0.0"
description = "Asynchronous extensions."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/async-extensions"
repository = "https://github.com/nekitdev/async-extensions"

keywords = ["python", "async", "extensions"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://nekit.dev/chat"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/async-extensions/issues"

[[tool.poetry.packages]]
include = "async_extensions"

[tool.poetry.dependencies]
python = ">= 3.8"

attrs = "^23.2.0"

anyio = "^4.3.0"
solus = "^1.1.0"
wraps = "^0.8.0"

typing-aliases = "^1.6.0"
typing-extensions = "^4.9.0"

[tool.poetry.group.format.dependencies]
ruff = "0.2.2"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.check.dependencies.pre-commit]
version = "^3.6.2"
python = ">= 3.9"

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.3.0"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.changelogging]
name = "async-extensions"
version = "2.0.0"
url = "https://github.com/nekitdev/async-extensions"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
